Fixed word wrapping...
Web version is still not applying styling coloring, unfortunately.

--- a/css/web.css
+++ b/css/web.css
@@ -37,10 +37,12 @@ code {
 	font: 0.8rem/1.4 Messenger Mono, monospace;
 	background: rgba(0, 255, 0, .04);
 	border: 1px solid rgba(0,255,0,0.1);
-	padding: 0.1in 0in;
+	padding: 0.1in 0.05in;
 	margin: 1em 0in;
 	display: inline-block;
   width: 100%;
+  white-space: normal;
+  word-wrap: break-word;
 }
 
 /* ----------------------------------
